--- a/package.json
+++ b/package.json
@@ -3,7 +3,18 @@
   "version": "0.0.0",
   "description": "dat core",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "hyperlog": "^1.0.2",
+    "leveldown": "^0.10.4",
+    "levelup": "^0.19.0",
+    "lexicographic-integer": "^1.1.0",
+    "mkdirp": "^0.5.0",
+    "mutexify": "^1.0.1",
+    "pump": "^1.0.0",
+    "subleveldown": "^2.0.0",
+    "through2": "^0.6.3",
+    "thunky": "^0.1.0"
+  },
   "devDependencies": {},
   "repository": {
     "type": "git",
