--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "dat core",
   "main": "index.js",
   "dependencies": {
+    "duplexify": "^3.2.0",
     "hyperlog": "^1.0.2",
     "leveldown": "^0.10.4",
     "levelup": "^0.19.0",
