--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "duplexify": "^3.2.0",
     "hyperlog": "^1.0.2",
-    "leveldown": "^0.10.4",
+    "leveldown-prebuilt": "^1.0.3",
     "levelup": "^0.19.0",
     "lexicographic-integer": "^1.1.0",
     "mkdirp": "^0.5.0",
