--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "duplexify": "^3.2.0",
-    "hyperlog": "^1.0.2",
+    "hyperlog": "mafintosh/hyperlog",
     "leveldown-prebuilt": "^1.0.3",
     "levelup": "^0.19.0",
     "lexicographic-integer": "^1.1.0",
@@ -20,6 +20,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/maxogden/dat-core.git"
+  },
+  "bin": {
+    "dat-core": "./bin.js"
   },
   "license": "MIT",
   "bugs": {
