--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "dependencies": {
     "duplexify": "^3.2.0",
     "hyperlog": "mafintosh/hyperlog",
+    "level-errors": "^1.0.3",
     "leveldown-prebuilt": "^1.0.3",
     "levelup": "^0.19.0",
     "lexicographic-integer": "^1.1.0",
     "mkdirp": "^0.5.0",
+    "multistream": "^1.4.2",
     "mutexify": "^1.0.1",
+    "protocol-buffers": "^2.6.1",
     "pump": "^1.0.0",
+    "sorted-union-stream": "^1.0.2",
     "subleveldown": "^2.0.0",
     "through2": "^0.6.3",
-    "thunky": "^0.1.0"
+    "thunky": "^0.1.0",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {},
   "repository": {
