--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "protocol-buffers": "^2.6.1",
     "pump": "^1.0.0",
     "sorted-union-stream": "^1.0.2",
+    "stream-collector": "^1.0.1",
     "subleveldown": "^2.0.0",
     "through2": "^0.6.3",
     "thunky": "^0.1.0",
