--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
   "bugs": {
     "url": "https://github.com/maxogden/dat-core/issues"
   },
-  "homepage": "https://github.com/maxogden/dat-core"
+  "homepage": "https://github.com/maxogden/dat-core",
+  "standard": {
+    "ignore": [
+      "sandbox.js"
+    ]
+  }
 }
