--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mutexify": "^1.0.1",
     "protocol-buffers": "^2.6.1",
     "pump": "^1.0.0",
+    "sorted-diff-stream": "^1.0.0",
     "sorted-union-stream": "^1.0.2",
     "stream-collector": "^1.0.1",
     "subleveldown": "^2.0.0",
