--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "dat core",
   "main": "index.js",
   "dependencies": {
+    "cuid": "^1.2.4",
     "duplexify": "^3.2.0",
-    "hyperlog": "^3.3.0",
+    "hyperlog": "^3.3.1",
     "level-errors": "^1.0.3",
     "leveldown-prebuilt": "^1.0.3",
     "levelup": "^0.19.0",
