--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "dependencies": {
     "cuid": "^1.2.4",
-    "duplexify": "^3.2.0",
-    "hyperlog": "^3.3.1",
+    "duplexify": "^3.3.0",
+    "end-of-stream": "^1.1.0",
+    "hyperlog": "^3.6.0",
     "level-errors": "^1.0.3",
     "leveldown-prebuilt": "^1.0.3",
     "levelup": "^0.19.0",
     "lexicographic-integer": "^1.1.0",
     "mkdirp": "^0.5.0",
+    "multileveldown": "^1.1.0",
     "mutexify": "^1.0.1",
+    "pbs": "^1.3.1",
     "protocol-buffers": "^2.6.1",
     "pump": "^1.0.0",
     "sorted-diff-stream": "^1.0.1",
