--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "dat core",
   "main": "index.js",
   "dependencies": {
+    "after-all": "^2.0.2",
     "content-addressable-blob-store": "^4.1.1",
     "cuid": "^1.2.4",
     "duplexify": "^3.3.0",
     "end-of-stream": "^1.1.0",
-    "hyperlog": "^3.6.0",
+    "hyperlog": "^3.7.0",
     "level-errors": "^1.0.3",
     "leveldown-prebuilt": "^1.0.3",
     "levelup": "^0.19.0",
     "lexicographic-integer": "^1.1.0",
     "mkdirp": "^0.5.0",
     "multileveldown": "^1.1.0",
+    "multiplex": "^6.0.4",
     "mutexify": "^1.0.1",
+    "parallel-transform": "^0.2.2",
     "pbs": "^1.3.1",
     "protocol-buffers": "^2.6.1",
     "pump": "^1.0.0",
