--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "after-all": "^2.0.2",
+    "byte-stream": "^2.1.0",
     "content-addressable-blob-store": "^4.1.1",
     "cuid": "^1.2.4",
     "duplexify": "^3.4.1",
@@ -22,6 +23,7 @@
     "pbs": "^1.3.1",
     "protocol-buffers": "^2.6.1",
     "pump": "^1.0.0",
+    "pumpify": "^1.3.3",
     "sorted-diff-stream": "^1.0.1",
     "sorted-union-stream": "^2.1.1",
     "stream-collector": "^1.0.1",
