--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "framed-hash": "^1.0.0",
     "hyperlog": "^4.0.0",
     "level-errors": "^1.0.3",
-    "leveldown-prebuilt": "^1.0.3",
+    "leveldown": "^1.2.2",
     "levelup": "^0.19.0",
     "lexicographic-integer": "^1.1.0",
     "mkdirp": "^0.5.0",
