--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mkdirp": "^0.5.0",
     "multileveldown": "^1.1.0",
     "multiplex": "^6.0.4",
+    "multistream": "^2.0.1",
     "mutexify": "^1.0.1",
     "parallel-transform": "^0.2.2",
     "pbs": "^1.3.1",
@@ -29,6 +30,7 @@
     "sorted-diff-stream": "^1.0.2",
     "sorted-union-stream": "^2.1.1",
     "stream-collector": "^1.0.1",
+    "stream-iterate": "^1.1.1",
     "subleveldown": "^2.0.0",
     "through2": "^0.6.3",
     "thunky": "^0.1.0",
